force-app/main/default/objects/GrilleRemiseVendeur__c/GrilleRemiseVendeur__c.object-meta.xml
<CustomObject>
    <description>Cet objet est utilisé pour l&apos;application automatique de la remise vendeur cible.</description>
    <label>Grille Remise Vendeur</label>
    <nameField>
        <label>Nom</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grilles Remise Vendeur</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>