force-app/main/default/objects/GrilleRemiseVendeur__c/fields/RemiseVendeur__c.field-meta.xml
<CustomField>
    <fullName>RemiseVendeur__c</fullName>
    <description>Ce champ est utilisé pour l&apos;application automatique de la remise vendeur cible. Il désigne le % max possible de la remise vendeur.</description>
    <label>Remise Vendeur</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>